<resources>
    <string name="app_name">CalculatorRemixLab</string>
    <string name="totalBill_heading">Total Bill:</string>
    <string name="tip_percentage">Tip Percentage:</string>
    <string name="number_of_people">Number of People:</string>
    <string name="calculate">Calculate</string>
    <string name="fahrenheit">Fahrenheit:</string>
    <string name="convert">Convert</string>
    <string name="celsius">Celsius:</string>
    <string name="fragment_id">#</string>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
</resources>