<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/MHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/miles"
        app:layout_constraintBottom_toTopOf="@+id/KHeader"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/MilesInput"
        android:layout_width="167dp"
        android:layout_height="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/MHeader"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/KHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/kilometers"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/MHeader" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/kiloInput"
        android:layout_width="143dp"
        android:layout_height="45dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/KHeader"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <Button
        android:id="@+id/convertButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kiloInput" />

    <TextView
        android:id="@+id/output2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertButton2" />
</androidx.constraintlayout.widget.ConstraintLayout>